--- a/index.html
+++ b/index.html
@@ -1,61 +1,137 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-    <title>kalkulator</title>
-    <link rel="stylesheet" href="./assets/style.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <link rel="stylesheet" type="text/css" href="./assets/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:600,700" rel="stylesheet">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <title>A simple calculator</title>
 </head>
 
 <body>
+    <div class="container mx-auto sm:px-6 lg:px-8 my-10 h-screen">
+        <div class="flex max-w-sm mx-8 sm:mx-auto my-8 flex flex-col bg-gray-800 rounded-xl">
+            <div class="px-4 py-5 sm:px-6">
+                <h3 class="text-lg leading-6 font-bold text-white">
+                    Simple Calculator
+                </h3>
+            </div>
+            <div class="h-32 sm:h-48 p-4 flex flex-col justify-end" id="result">
+                <div class="flex h-auto justify-end" id="history">
+                    <p class="text-sm text-gray-400" id="history-value"></p>
+                </div>
+                <div class="flex h-auto justify-end" id="output">
+                    <p class="font-bold text-4xl text-white" id="output-value"></p>
+                </div>
+            </div>
+            <div id="keyboard" class="rounded-xl bg-gray-700 flex flex-col p-6 gap-y-2 h-auto">
+                <div class="flex gap-x-4 items-stretch">
+                    <button name="operator"
+                        class="w-full items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-white bg-emerald-600 hover:bg-emerald-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
+                        id="clear">AC</button>
+                    <button name="operator"
+                        class="w-full items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-white bg-emerald-600 hover:bg-emerald-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
+                        id="backspace">CE</button>
+                    <button name="operator"
+                        class="w-full items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-white bg-emerald-600 hover:bg-emerald-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
+                        id="%">%</button>
+                    <button name="operator"
+                        class="w-full items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-white bg-orange-400 hover:bg-orange-300 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
+                        id="/">&#247;</button>
+                </div>
 
-    <div class="flex-container-column card">
-        <div class="display">
-            <h1 id="displayNumber">0</h1>
-        </div>
-        <div class="flex-container-row">
-            <div class="button">7</div>
-            <div class="button">8</div>
-            <div class="button">9</div>
-            <div class="button negative">+/-</div>
-        </div>
-        <div class="flex-container-row">
-            <div class="button">4</div>
-            <div class="button">5</div>
-            <div class="button">6</div>
-            <div class="button operator">-</div>
-        </div>
-        <div class="flex-container-row">
-            <div class="button">1</div>
-            <div class="button">2</div>
-            <div class="button">3</div>
-            <div class="button operator">+</div>
-        </div>
-        <div class="flex-container-row">
-            <div class="button clear">CE</div>
-            <div class="button">0</div>
-            <div class="button equals double">=</div>
-
+                <div class="flex items-stretch gap-x-4">
+                    <button name="number"
+                        class="w-full items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-white bg-gray-600 hover:bg-gray-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
+                        id="7">7</button>
+                    <button name="number"
+                        class="w-full items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-white bg-gray-600 hover:bg-gray-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
+                        id="8">8</button>
+                    <button name="number"
+                        class="w-full items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-white bg-gray-600 hover:bg-gray-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
+                        id="9">9</button>
+                    <button name="operator"
+                        class="w-full items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-white bg-orange-400 hover:bg-orange-300 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
+                        id="*">&times;</button>
+                </div>
+                <div class="flex items-stretch gap-x-4">
+                    <button name="number"
+                        class="w-full items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-white bg-gray-600 hover:bg-gray-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
+                        id="4">4</button>
+                    <button name="number"
+                        class="w-full items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-white bg-gray-600 hover:bg-gray-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
+                        id="5">5</button>
+                    <button name="number"
+                        class="w-full items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-white bg-gray-600 hover:bg-gray-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
+                        id="6">6</button>
+                    <button name="operator"
+                        class="w-full items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-white bg-orange-400 hover:bg-orange-300 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
+                        id="-">-</button>
+                </div>
+                <div class="flex items-stretch gap-x-4">
+                    <button name="number"
+                        class="w-full items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-white bg-gray-600 hover:bg-gray-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
+                        id="1">1</button>
+                    <button name="number"
+                        class="w-full items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-white bg-gray-600 hover:bg-gray-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
+                        id="2">2</button>
+                    <button name="number"
+                        class="w-full items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-white bg-gray-600 hover:bg-gray-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
+                        id="3">3</button>
+                    <button name="operator"
+                        class="w-full items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-white bg-orange-400 hover:bg-orange-300 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
+                        id="+">+</button>
+                </div>
+                <div class="flex items-stretch gap-x-4">
+                    <button disabled
+                        class="w-full items-center px-4 py-2 text-sm font-medium rounded-md text-white bg-gray-700"
+                        id="empty"></button>
+                    <button name="number"
+                        class="w-full items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-white bg-gray-600 hover:bg-gray-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
+                        id="0">0</button>
+                    <button disabled
+                        class="w-full items-center px-4 py-2 text-sm font-medium rounded-md text-white bg-gray-700"
+                        id="empty"></button>
+                    <button name="operator"
+                        class="w-full items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-white bg-orange-600 hover:bg-orange-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
+                        id="=">=</button>
+                </div>
+            </div>
         </div>
     </div>
-    <div class="history card">
-        <h2>Riwayat Perhitungan</h2>
-        <table>
-            <thead>
-                <tr>
-                    <th>Angka Pertama</th>
-                    <th>Operator</th>
-                    <th>Angka Kedua</th>
-                    <th>Hasil</th>
-                </tr>
-            </thead>
-            <tbody id="historyList"></tbody>
-        </table>
-    </div>
-    <script src="storage.js">
-
-    </script>
+    <!-- <div id="container">
+        <div id="calculator">
+            <div class="result" id="result">
+                <div id="history">
+                    <p id="history-value"></p>
+                </div>
+                <div id="output">
+                    <p id="output-value"></p>
+                </div>
+            </div>
+            <div id="keyboard">
+                <button class="operator" id="clear">C</button>
+                <button class="operator" id="backspace">CE</button>
+                <button class="operator" id="%">%</button>
+                <button class="operator" id="/">&#247;</button>
+                <button name="number" class="number" id="7">7</button>
+                <button class="number" id="8">8</button>
+                <button class="number" id="9">9</button>
+                <button class="operator" id="*">&times;</button>
+                <button class="number" id="4">4</button>
+                <button class="number" id="5">5</button>
+                <button class="number" id="6">6</button>
+                <button class="operator" id="-">-</button>
+                <button class="number" id="1">1</button>
+                <button class="number" id="2">2</button>
+                <button class="number" id="3">3</button>
+                <button class="operator" id="+">+</button>
+                <button class="empty" id="empty"></button>
+                <button class="number" id="0">0</button>
+                <button class="empty" id="empty"></button>
+                <button class="operator" id="=">=</button>
+            </div>
+        </div>
+    </div> -->
     <script src="./assets/index.js"></script>
 </body>
 
