--- a/index.html
+++ b/index.html
@@ -2,137 +2,101 @@
 
 <head>
     <link rel="stylesheet" type="text/css" href="./assets/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:600,700" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
     <title>A simple calculator</title>
 </head>
 
 <body>
-    <div class="container mx-auto sm:px-6 lg:px-8 my-10 h-screen">
-        <div class="flex max-w-sm mx-8 sm:mx-auto my-8 flex flex-col bg-gray-800 rounded-xl">
-            <div class="px-4 py-5 sm:px-6">
+    <div class="container mx-auto sm:px-6 lg:px-8 my-10">
+        <div class="flex max-w-sm mx-8 sm:mx-auto my-8 flex flex-col bg-gray-900 rounded-xl">
+            <div class="px-4 py-5 sm:px-6 bg-gray-800 rounded-t-xl">
                 <h3 class="text-lg leading-6 font-bold text-white">
-                    Simple Calculator
+                    calc<span class="text-red-500">.</span>
                 </h3>
             </div>
-            <div class="h-32 sm:h-48 p-4 flex flex-col justify-end" id="result">
+            <div class="h-24 p-4 flex flex-col justify-end" id="result">
                 <div class="flex h-auto justify-end" id="history">
-                    <p class="text-sm text-gray-400" id="history-value"></p>
+                    <p data-previous-operand class="text-sm text-gray-400" id="history-value"></p>
                 </div>
                 <div class="flex h-auto justify-end" id="output">
-                    <p class="font-bold text-4xl text-white" id="output-value"></p>
+                    <p data-current-operand class="font-bold text-4xl text-white" id="output-value"></p>
                 </div>
             </div>
-            <div id="keyboard" class="rounded-xl bg-gray-700 flex flex-col p-6 gap-y-2 h-auto">
+            <div id="keyboard" class="rounded-xl bg-gray-800 flex flex-col p-6 gap-y-2 h-auto">
                 <div class="flex gap-x-4 items-stretch">
-                    <button name="operator"
-                        class="w-full items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-white bg-emerald-600 hover:bg-emerald-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
+                    <button data-all-clear name="operator"
+                        class="transition ease-in-out border-b-4 border-emerald-700 active:border-transparent active:translate-y-0.5 w-full items-center px-4 py-2 text-sm font-medium rounded-md shadow-sm text-white bg-emerald-600 hover:bg-emerald-500"
                         id="clear">AC</button>
-                    <button name="operator"
-                        class="w-full items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-white bg-emerald-600 hover:bg-emerald-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
-                        id="backspace">CE</button>
-                    <button name="operator"
-                        class="w-full items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-white bg-emerald-600 hover:bg-emerald-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
+                    <button data-delete name="operator"
+                        class="transition ease-in-out border-b-4 border-emerald-700 active:border-transparent active:translate-y-0.5 w-full items-center px-4 py-2 text-sm font-medium rounded-md shadow-sm text-white bg-emerald-600 hover:bg-emerald-500"
+                        id="backspace">DEL</button>
+                    <button data-operation name="operator"
+                        class="transition ease-in-out border-b-4 border-emerald-700 active:border-transparent active:translate-y-0.5 w-full items-center px-4 py-2 text-sm font-medium rounded-md shadow-sm text-white bg-emerald-600 hover:bg-emerald-500"
                         id="%">%</button>
-                    <button name="operator"
-                        class="w-full items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-white bg-orange-400 hover:bg-orange-300 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
+                    <button data-operation name="operator"
+                        class="transition ease-in-out border-b-4 border-orange-500 active:border-transparent active:translate-y-0.5 w-full items-center px-4 py-2 text-sm font-medium rounded-md shadow-sm text-white bg-orange-400 hover:bg-orange-300"
                         id="/">&#247;</button>
                 </div>
 
                 <div class="flex items-stretch gap-x-4">
-                    <button name="number"
-                        class="w-full items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-white bg-gray-600 hover:bg-gray-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
+                    <button data-number name="number"
+                        class="transition ease-in-out w-full items-center px-4 py-2 border-b-4 border-gray-700 active:border-transparent active:translate-y-0.5 text-sm font-medium rounded-md shadow-sm text-white bg-gray-600 hover:bg-gray-500"
                         id="7">7</button>
-                    <button name="number"
-                        class="w-full items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-white bg-gray-600 hover:bg-gray-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
+                    <button data-number name="number"
+                        class="transition ease-in-out w-full items-center px-4 py-2 border-b-4 border-gray-700 active:border-transparent active:translate-y-0.5 text-sm font-medium rounded-md shadow-sm text-white bg-gray-600 hover:bg-gray-500"
                         id="8">8</button>
-                    <button name="number"
-                        class="w-full items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-white bg-gray-600 hover:bg-gray-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
+                    <button data-number name="number"
+                        class="transition ease-in-out w-full items-center px-4 py-2 border-b-4 border-gray-700 active:border-transparent active:translate-y-0.5 text-sm font-medium rounded-md shadow-sm text-white bg-gray-600 hover:bg-gray-500"
                         id="9">9</button>
-                    <button name="operator"
-                        class="w-full items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-white bg-orange-400 hover:bg-orange-300 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
-                        id="*">&times;</button>
+                    <button data-operation name="operator"
+                        class="transition ease-in-out border-b-4 border-orange-500 active:border-transparent active:translate-y-0.5 w-full items-center px-4 py-2 text-sm font-medium rounded-md shadow-sm text-white bg-orange-400 hover:bg-orange-300"
+                        id="*">*</button>
                 </div>
                 <div class="flex items-stretch gap-x-4">
-                    <button name="number"
-                        class="w-full items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-white bg-gray-600 hover:bg-gray-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
+                    <button data-number name="number"
+                        class="transition ease-in-out w-full items-center px-4 py-2 border-b-4 border-gray-700 active:border-transparent active:translate-y-0.5 text-sm font-medium rounded-md shadow-sm text-white bg-gray-600 hover:bg-gray-500"
                         id="4">4</button>
-                    <button name="number"
-                        class="w-full items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-white bg-gray-600 hover:bg-gray-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
+                    <button data-number name="number"
+                        class="transition ease-in-out w-full items-center px-4 py-2 border-b-4 border-gray-700 active:border-transparent active:translate-y-0.5 text-sm font-medium rounded-md shadow-sm text-white bg-gray-600 hover:bg-gray-500"
                         id="5">5</button>
-                    <button name="number"
-                        class="w-full items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-white bg-gray-600 hover:bg-gray-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
+                    <button data-number name="number"
+                        class="transition ease-in-out w-full items-center px-4 py-2 border-b-4 border-gray-700 active:border-transparent active:translate-y-0.5 text-sm font-medium rounded-md shadow-sm text-white bg-gray-600 hover:bg-gray-500"
                         id="6">6</button>
-                    <button name="operator"
-                        class="w-full items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-white bg-orange-400 hover:bg-orange-300 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
+                    <button data-operation name="operator"
+                        class="transition ease-in-out border-b-4 border-orange-500 active:border-transparent active:translate-y-0.5 w-full items-center px-4 py-2 text-sm font-medium rounded-md shadow-sm text-white bg-orange-400 hover:bg-orange-300"
                         id="-">-</button>
                 </div>
                 <div class="flex items-stretch gap-x-4">
-                    <button name="number"
-                        class="w-full items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-white bg-gray-600 hover:bg-gray-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
+                    <button data-number name="number"
+                        class="transition ease-in-out w-full items-center px-4 py-2 border-b-4 border-gray-700 active:border-transparent active:translate-y-0.5 text-sm font-medium rounded-md shadow-sm text-white bg-gray-600 hover:bg-gray-500"
                         id="1">1</button>
-                    <button name="number"
-                        class="w-full items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-white bg-gray-600 hover:bg-gray-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
+                    <button data-number name="number"
+                        class="transition ease-in-out w-full items-center px-4 py-2 border-b-4 border-gray-700 active:border-transparent active:translate-y-0.5 text-sm font-medium rounded-md shadow-sm text-white bg-gray-600 hover:bg-gray-500"
                         id="2">2</button>
-                    <button name="number"
-                        class="w-full items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-white bg-gray-600 hover:bg-gray-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
+                    <button data-number name="number"
+                        class="transition ease-in-out w-full items-center px-4 py-2 border-b-4 border-gray-700 active:border-transparent active:translate-y-0.5 text-sm font-medium rounded-md shadow-sm text-white bg-gray-600 hover:bg-gray-500"
                         id="3">3</button>
-                    <button name="operator"
-                        class="w-full items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-white bg-orange-400 hover:bg-orange-300 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
+                    <button data-operation name="operator"
+                        class="transition ease-in-out border-b-4 border-orange-500 active:border-transparent active:translate-y-0.5 w-full items-center px-4 py-2 text-sm font-medium rounded-md shadow-sm text-white bg-orange-400 hover:bg-orange-300"
                         id="+">+</button>
                 </div>
                 <div class="flex items-stretch gap-x-4">
-                    <button disabled
-                        class="w-full items-center px-4 py-2 text-sm font-medium rounded-md text-white bg-gray-700"
-                        id="empty"></button>
-                    <button name="number"
-                        class="w-full items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-white bg-gray-600 hover:bg-gray-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
+                    <button data-number name="number"
+                        class="transition ease-in-out w-full items-center px-4 py-2 border-b-4 border-gray-700 active:border-transparent active:translate-y-0.5 text-sm font-medium rounded-md shadow-sm text-white bg-gray-600 hover:bg-gray-500"
                         id="0">0</button>
-                    <button disabled
-                        class="w-full items-center px-4 py-2 text-sm font-medium rounded-md text-white bg-gray-700"
-                        id="empty"></button>
-                    <button name="operator"
-                        class="w-full items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-white bg-orange-600 hover:bg-orange-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
+                    <button data-equals name="operator"
+                        class="transition ease-in-out border-b-4 border-orange-700 active:border-transparent active:translate-y-0.5 w-full items-center px-4 py-2 text-sm font-medium rounded-md shadow-sm text-white bg-orange-600 hover:bg-orange-500"
                         id="=">=</button>
                 </div>
             </div>
         </div>
     </div>
-    <!-- <div id="container">
-        <div id="calculator">
-            <div class="result" id="result">
-                <div id="history">
-                    <p id="history-value"></p>
-                </div>
-                <div id="output">
-                    <p id="output-value"></p>
-                </div>
-            </div>
-            <div id="keyboard">
-                <button class="operator" id="clear">C</button>
-                <button class="operator" id="backspace">CE</button>
-                <button class="operator" id="%">%</button>
-                <button class="operator" id="/">&#247;</button>
-                <button name="number" class="number" id="7">7</button>
-                <button class="number" id="8">8</button>
-                <button class="number" id="9">9</button>
-                <button class="operator" id="*">&times;</button>
-                <button class="number" id="4">4</button>
-                <button class="number" id="5">5</button>
-                <button class="number" id="6">6</button>
-                <button class="operator" id="-">-</button>
-                <button class="number" id="1">1</button>
-                <button class="number" id="2">2</button>
-                <button class="number" id="3">3</button>
-                <button class="operator" id="+">+</button>
-                <button class="empty" id="empty"></button>
-                <button class="number" id="0">0</button>
-                <button class="empty" id="empty"></button>
-                <button class="operator" id="=">=</button>
-            </div>
-        </div>
-    </div> -->
-    <script src="./assets/index.js"></script>
+    <script src="./assets/script.js"></script>
 </body>
 
 </html>
